fix overflow bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -232,6 +232,7 @@ header.site-header .right a {
     padding: 15px;
 }
 article.post-preview {
+    position: relative;
     width: 100vw;
     display: -webkit-box;
     display: -ms-flexbox;
