--- a/static/css/style_css4.css
+++ b/static/css/style_css4.css
@@ -163,6 +163,7 @@ header.site-header .right a {
     padding: 15px;
 }
 article.post-preview {
+    position: relative;
     width: 100vw;
     display: flex;
     flex-direction: row;
