--- a/static/css4/post-preview.css
+++ b/static/css4/post-preview.css
@@ -1,4 +1,5 @@
 article.post-preview {
+    position: relative;
     width: 100vw;
     display: flex;
     flex-direction: row;
